<resources>
    <string name="app_name" translatable="false">TashkentMetro</string>
    <string name="unit_id" translatable="false">ca-app-pub-9328127676050018/2265175107</string>
    <string name="inertsial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="home">Home</string>
    <style name="key_api">AIzaSyDpXaUsY2oeppw0g8qwYMnUWzXLfxp74Co</style>
    <string name="maps">Maps</string>
    <string name="settings">Settings</string>
    <string name="colored_text">Check if <font color="#FF8C00">train</font> is coming or will come with up-to-date information.</string>
    <string name="colored_text_intro">All <font color="#FF8C00">Contributions</font> are placed in:</string>
    <string name="enable_desc">Let Tashkent Metro access your\n location to find nearby stations.</string>
    <!-- Spinner options for language -->
    <string-array name="language_array">
        <item>English</item>
        <item>Russian</item>
        <item>Uzbek</item>

        <!-- Add more languages as needed -->
    </string-array>


    <!-- Content descriptions for accessibility -->
    <string name="language_icon">Language Icon</string>
    <string name="theme_icon">Theme Icon</string>

    <string name="next">Next</string>
    <string name="live">Live</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="account">Account</string>
    <string name="login_register">Login / Register</string>
    <string name="contribute_join_leaderboard">Contribute, join Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="russian">Russian</string>
    <string name="uzbek">Uzbek</string>
    <string name="newtype">New</string>
    <string name="middle">Middle</string>
    <string name="old">Old</string>
    <string name="came">Came</string>
    <string name="cancel">Cancel</string>
    <string name="choose_map">Choose Map</string>
    <string name="standart">Standart</string>
    <string name="hybrid">Hybrid</string>
    <string name="contribute">Contribute</string>
    <string name="win_prizes_from_contributing">Win prizes from contributing</string>
    <string name="enable_location">Enable Location</string>
    <string name="stations">Stations</string>
    <string name="contribution">Contribution</string>
    <string name="not_now">Not now</string>
    <string name="auto">System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Station</string>
    <string name="transfer_to_the_other_line">Transfer to the other line.</string>
    <string name="delete">Delete</string>
    <string name="popular_stations">Popular stations</string>
    <string name="underground">Underground</string>
    <string name="route_details">Route Details\t\t\t\t\t\t</string>
    <string name="search_station">Search station</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="type_your_valid_phone_number">Type your valid phone number</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_received_code_from">Enter received code from</string>
    <string name="check_the_spelling_or_try_a_new_search">Check the spelling or try a new search</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="unlock_pro_access">Unlock pro access</string>
    <string name="get_access_to_all_of_our_features">Get access to all of our features</string>
    <string name="faster_result_and_better_performance">Faster result and better performance</string>
    <string name="find_nearby_stations">Find Nearby Stations</string>
    <string name="map_style_modification">Map Style Modification</string>
    <string name="premium_customer_support">Premium Customer Support</string>
    <string name="remove_ads_and_enjoy_without_any_distractions">Remove ads and enjoy without any distractions</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="get_full_access_for_just_1_100">Get full access for just ₩1,100</string>
    <string name="yearly_subscription">Yearly Subscription</string>
    <string name="get_full_access_for_just_6_600">Get full access for just ₩6,600</string>
    <string name="dark" >Night</string>
    <string name="light" >Light</string>
    <string name="subscribe_now">Subscribe Now</string>
</resources>