<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    tools:context=".ui.screens.auth.RegisterScreen">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/button_back_to_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                app:srcCompat="@drawable/ic_arrow_back"
                app:tint="@color/colorPrimary" />

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/login_register"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/phone_number"
        android:textColor="@color/bg_black_50"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/maskPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@android:color/transparent"
                android:hint="+998 XX-XXX-XX-XX"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".5"
                android:visibility="gone" />

            <TextView
                android:id="@+id/button_edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/edit_phone_number"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/type_your_valid_phone_number"
        android:textColor="@color/bg_black_50"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />


    <TextView

        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/verification_code"
        android:textAllCaps="true"
        android:textColor="@color/bg_black_50"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/input_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@android:color/transparent"
                android:hint="XXX-XXX"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="7"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                app:mask="###-###" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:alpha=".5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_resend_code"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/resend_code"

                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/resend_timer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="1:00" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/received_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/enter_received_code_from"
        android:textColor="@color/bg_black_50"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_enter_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="received_txt,cardView6,textView14" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:enabled="false"
        android:fitsSystemWindows="true"
        android:fontFamily="@font/nunito_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/next"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>