<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.screens.intro.FirstPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient_shadow"
  />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/live"
        android:textColor="@color/whiteMain"
        android:textSize="@dimen/_24sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/location"
        android:textColor="@color/colorSecondary"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:visibility="visible" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleIntro"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:src="@drawable/circle_intro"
        app:civ_border_color="@color/whiteMain"
        app:civ_border_width="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@+id/circleImageView2"
        app:layout_constraintEnd_toEndOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/circle_intro2"
        app:civ_border_color="@color/whiteMain"
        app:civ_border_width="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@+id/timeTxt"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/live"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/timeTxt"
        app:layout_constraintEnd_toStartOf="@+id/timeTxt"
        app:layout_constraintTop_toTopOf="@+id/timeTxt"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/time"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_24sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView8"

        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/colored_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"

        app:layout_constraintBottom_toTopOf="@+id/logoContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="563dp" />


    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="@+id/nextBtn"
        app:layout_constraintStart_toStartOf="@+id/nextBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_2sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="ZBEKZ"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="GROUP"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_20sdp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="647dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/nunito_extra_bold"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/next"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>